release 1.3 (06-2010)
- GlassFish v3 integration
  Instead of one big uber JAR, jersey-gf-bundle.jar, individual Jersey modules 
  are integrated to GlassFish to allow better modularization
  and alignment with non GlassFish environment
- Fixed issue 436
  https://jersey.dev.java.net/issues/show_bug.cgi?id=436
  Resources may be looked up using a URI via methods on 
  com.sun.jersey.api.core.ResourceContext.
- Fixed issue 489
  https://jersey.dev.java.net/issues/show_bug.cgi?id=489
  Support configurable namespace separators for JAXB/JSON.
  See com.sun.jersey.api.json.JSONConfiguration#nsSeparator
- Fixed Jersey versioning issue for GlassFish when a version of
  Jersey is deployed in the war that is different to the version of Jersey
  version distributed with GlassFish.
  META-INF/sevices files will be ignored if the corresponding
  META-INF/MANIFEST.MF of the same jar contains a Bundle-SymbolicName
  beginning with "com.sun.jersey" and a Bundle-Version that is not equal
  to the Bundle-Version declared in the META-INF/MANIFEST.MF for the same jar
  that contains the com.sun.jersey.spi.service.ServiceFinder.class.
- Fixed issue 66
  https://jersey.dev.java.net/issues/show_bug.cgi?id=66
  *Breaking changes*
  Errors will result if dependencies cannot be injected rather than a null
  value being injected.
  Non-static inner classes as root resource and provider classes are no longer
  supported.
- Fixed issue for WadlGeneratorConfig and building of properties, which now
  correctly works for any property value type.
- Fixed issue 527
  https://jersey.dev.java.net/issues/show_bug.cgi?id=527
  Package name scanning now works in an OSGi environment
- Jersey Test Framework
  Adding support for setting servlet and concurrent filter(s) with possibility
  to set up filter name and init params per filter
- Fixed issue 526
  https://jersey.dev.java.net/issues/show_bug.cgi?id=526
  Provide access to the matching AbstractResourceMethod that was invoked